sharing: Fix crash in media preferences

When XDG user dirs are badly setup, g_get_user_special_dir() will return
NULL, causing us to crash. Use g_strcmp0() instead.

https://bugzilla.gnome.org/show_bug.cgi?id=733489